--- a/notebooks/HuggingfaceDatasetUpload.ipynb
+++ b/notebooks/HuggingfaceDatasetUpload.ipynb
@@ -2,14 +2,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 3,
       "metadata": {
         "id": "FxzGpm8krMmg"
       },
       "outputs": [],
       "source": [
         "import dotenv\n",
-        "from datasets import load_dataset,Dataset,ClassLabel\n",
+        "from datasets import load_dataset,Dataset,ClassLabel,concatenate_datasets\n",
         "from datasets.features import Features,Value\n",
         "import os\n",
         "import pandas as pd\n",
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "id": "kJ5mZ9VnslkT"
       },
@@ -262,7 +262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -291,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -300,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 18,
       "metadata": {
         "id": "cSv5XiiNuVLS"
       },
@@ -312,11 +312,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
-        "ner[\"sentence_id\"] = ner[\"Sentence #\"].ffill().str.split(\":\").apply(lambda v: v[-1])\n",
+        "ner[\"sentence_id\"] = ner[\"Sentence #\"].ffill().str.split(\":\").apply(lambda v: v[-1].strip())\n",
         "ner[\"tag\"] = ner.Tag.str.upper()\n",
         "ner[\"ner_tags\"] = ner.tag.map(label2id)\n",
         "ner = ner.rename({\"Word\":\"tokens\"},axis=1)"
@@ -324,27 +324,120 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
           "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead tr th {\n",
+              "        text-align: left;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead tr:last-of-type th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th></th>\n",
+              "      <th colspan=\"8\" halign=\"left\">tag</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Entity</th>\n",
+              "      <th>ART</th>\n",
+              "      <th>EVE</th>\n",
+              "      <th>GEO</th>\n",
+              "      <th>GPE</th>\n",
+              "      <th>NAT</th>\n",
+              "      <th>ORG</th>\n",
+              "      <th>PER</th>\n",
+              "      <th>TIM</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>type</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>B</th>\n",
+              "      <td>402</td>\n",
+              "      <td>308</td>\n",
+              "      <td>37644</td>\n",
+              "      <td>15870</td>\n",
+              "      <td>201</td>\n",
+              "      <td>20143</td>\n",
+              "      <td>16990</td>\n",
+              "      <td>20333</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>I</th>\n",
+              "      <td>297</td>\n",
+              "      <td>253</td>\n",
+              "      <td>7414</td>\n",
+              "      <td>198</td>\n",
+              "      <td>51</td>\n",
+              "      <td>16784</td>\n",
+              "      <td>17251</td>\n",
+              "      <td>6528</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
             "text/plain": [
-              "(1048575, 7)"
+              "        tag                                             \n",
+              "Entity  ART  EVE    GEO    GPE  NAT    ORG    PER    TIM\n",
+              "type                                                    \n",
+              "B       402  308  37644  15870  201  20143  16990  20333\n",
+              "I       297  253   7414    198   51  16784  17251   6528"
             ]
           },
-          "execution_count": 74,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "ner.shape"
+        "table = ner.tag.value_counts().reset_index()\n",
+        "i = table[\"index\"].str.split(\"-\")\n",
+        "table[\"type\"] = [x[0] if len(x) != 1 else \"O\" for x in i.values]\n",
+        "table[\"Entity\"] = [x[1] if len(x) != 1 else \"O\" for x in i.values]\n",
+        "sub = table.query(\"type != 'O'\")\n",
+        "sub.set_index([\"type\",\"Entity\"]).drop(\"index\",axis=1).unstack()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 29,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "oversampler_id = list(ner.query(\"tag in ('B-ART','B-EVE','B-NAT')\").sentence_id.unique())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -353,7 +446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -362,7 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
@@ -442,7 +535,7 @@
               "4  [5, 0, 0, 1, 2, 0, 9, 0, 5, 0, 7, 0, 7, 0, 0, ...  "
             ]
           },
-          "execution_count": 54,
+          "execution_count": 32,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -453,111 +546,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [],
       "source": [
-        "ner_dataset = Dataset.from_pandas(grouped_df)"
+        "over = grouped_df[grouped_df.sentence_id.isin(oversampler_id)]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [],
       "source": [
-        "ner_dataset.features[\"ner_tags\"].feature = ClassLabel(num_classes=17, names=labels_name, id=None)"
+        "normal = grouped_df[~grouped_df.sentence_id.isin(oversampler_id)]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [],
       "source": [
-        "ner_feature = ner_dataset.features[\"ner_tags\"]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 70,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "Sequence(feature=ClassLabel(num_classes=17, names=['O', 'B-PER', 'I-PER', 'B-ORG', 'I-ORG', 'B-GEO', 'I-GEO', 'B-GPE', 'I-GPE', 'B-TIM', 'I-TIM', 'B-ART', 'I-ART', 'B-EVE', 'I-EVE', 'B-NAT', 'I-NAT'], id=None), length=-1, id=None)"
-            ]
-          },
-          "execution_count": 70,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "ner_feature"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 72,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "label_names = ner_feature.feature.names\n",
-        "#label_names"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 75,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "bcd553efcca34ef8957f58cf1721149c",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Pushing dataset shards to the dataset hub:   0%|          | 0/4 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/home/rjac/anaconda3/envs/hf/lib/python3.10/site-packages/huggingface_hub/hf_api.py:1948: FutureWarning: `identical_ok` has no effect and is deprecated. It will be removed in 0.11.0.\n",
-            "  warnings.warn(\n"
-          ]
-        }
-      ],
-      "source": [
-        "ner_dataset.push_to_hub(\"rjac/kaggle-entity-annotated-corpus-ner-dataset\",max_shard_size=\"5MB\",private=False,token=os.getenv(\"AUTH_TOKEN\"))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 79,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "0"
-            ]
-          },
-          "execution_count": 79,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "grouped_df.apply(lambda x: len(x[\"tokens\"]) - len(x[\"ner_tags\"]),axis=1).sum()"
+        "over = over.sample(10_000,replace=True,random_state=743)"
       ]
     },
     {
@@ -565,7 +576,31 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "ner_dataset = Dataset.from_pandas(grouped_df)\n",
+        "ner_dataset.features[\"ner_tags\"].feature = ClassLabel(num_classes=17, names=labels_name, id=None)\n",
+        "ner_feature = ner_dataset.features[\"ner_tags\"]\n",
+        "label_names = ner_feature.feature.names\n",
+        "ner_dataset.push_to_hub(\"rjac/kaggle-entity-annotated-corpus-ner-dataset\",max_shard_size=\"5MB\",private=False,token=os.getenv(\"AUTH_TOKEN\"))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 47,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df = pd.concat([normal,over]).reset_index(drop=True).reset_index()\n",
+        "df = df.rename({\"index\":\"idx\"},axis=1)\n",
+        "\n",
+        "ner_dataset = Dataset.from_pandas(df)\n",
+        "ner_dataset.features[\"ner_tags\"].feature = ClassLabel(num_classes=17, names=labels_name, id=None)\n",
+        "ner_feature = ner_dataset.features[\"ner_tags\"]\n",
+        "label_names = ner_feature.feature.names\n",
+        "ner_dataset.push_to_hub(\"rjac/kaggle-entity-annotated-corpus-ner-dataset\",max_shard_size=\"5MB\",private=False,token=os.getenv(\"AUTH_TOKEN\"))\n",
+        "\n",
+        "ner_dataset.push_to_hub(\"rjac/kaggle-entity-annotated-corpus-ner-dataset-oversampled\",max_shard_size=\"5MB\",private=False,token=os.getenv(\"AUTH_TOKEN\"))"
+      ]
     }
   ],
   "metadata": {
