--- a/notebooks/HuggingfaceDatasetUpload.ipynb
+++ b/notebooks/HuggingfaceDatasetUpload.ipynb
@@ -262,7 +262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -291,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -300,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 60,
       "metadata": {
         "id": "cSv5XiiNuVLS"
       },
@@ -312,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -324,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 62,
       "metadata": {},
       "outputs": [
         {
@@ -412,7 +412,7 @@
               "I       297  253   7414    198   51  16784  17251   6528"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 62,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -428,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 63,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -437,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 64,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -446,7 +446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 65,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -455,7 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 66,
       "metadata": {},
       "outputs": [
         {
@@ -535,7 +535,7 @@
               "4  [5, 0, 0, 1, 2, 0, 9, 0, 5, 0, 7, 0, 7, 0, 0, ...  "
             ]
           },
-          "execution_count": 32,
+          "execution_count": 66,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -546,7 +546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 67,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -555,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 68,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -564,11 +564,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 69,
       "metadata": {},
       "outputs": [],
       "source": [
-        "over = over.sample(10_000,replace=True,random_state=743)"
+        "over = over.sample(25_000,replace=True,random_state=743)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Data "
       ]
     },
     {
@@ -585,20 +592,82 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 47,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
+      "source": [
+        "#### Oversampled Data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 70,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "01b38d9b0da64422ab62647a29c35700",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Pushing dataset shards to the dataset hub:   0%|          | 0/6 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/home/rjac/anaconda3/envs/hf/lib/python3.10/site-packages/huggingface_hub/hf_api.py:1948: FutureWarning: `identical_ok` has no effect and is deprecated. It will be removed in 0.11.0.\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "1bf95361b70b450fb64e274c9dbda5f6",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Deleting unused files from dataset repository:   0%|          | 0/5 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "e36f8db52c65434dbf23889b915abb70",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Downloading metadata:   0%|          | 0.00/1.99k [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Updating downloaded metadata with the new split.\n"
+          ]
+        }
+      ],
       "source": [
         "df = pd.concat([normal,over]).reset_index(drop=True).reset_index()\n",
         "df = df.rename({\"index\":\"idx\"},axis=1)\n",
-        "\n",
         "ner_dataset = Dataset.from_pandas(df)\n",
         "ner_dataset.features[\"ner_tags\"].feature = ClassLabel(num_classes=17, names=labels_name, id=None)\n",
         "ner_feature = ner_dataset.features[\"ner_tags\"]\n",
         "label_names = ner_feature.feature.names\n",
-        "ner_dataset.push_to_hub(\"rjac/kaggle-entity-annotated-corpus-ner-dataset\",max_shard_size=\"5MB\",private=False,token=os.getenv(\"AUTH_TOKEN\"))\n",
-        "\n",
         "ner_dataset.push_to_hub(\"rjac/kaggle-entity-annotated-corpus-ner-dataset-oversampled\",max_shard_size=\"5MB\",private=False,token=os.getenv(\"AUTH_TOKEN\"))"
       ]
     }
